logs/2026-04-07_morning.log
Traceback (most recent call last):
  File "/Users/shogo/develop/obsidian-automation/src/daily_manager.py", line 22, in <module>
    from src.notes_processor import process_unprocessed_notes
  File "/Users/shogo/develop/obsidian-automation/src/notes_processor.py", line 100
    contents=[system_prompt, f"以下のメモを処理してください:
                             ^
SyntaxError: unterminated f-string literal (detected at line 100)
